<resources>
    <string name="app_name">FindMe</string>
    <string name="typeYourStatus">Co aktualnie robisz?</string>
    <string name="yourCurrentStatusPopUpHint">Napisz np. chodzę po galerii i szukam jeansów :)</string>
    <string name="buttonUpdateMyStatusPopUpSend">Prześlij</string>
    <string name="buttonCancelStatusUpdate">Anuluj</string>
    <string name="buttonChaneStatus">Zmień status</string>
    <string name="buttonQuitApp">Wyloguj</string>

    <string name="username_hint">Użytkownik</string>
    <string name="password_hint">Hasło</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Zarejestruj się</string>
    <string name="signup_error_message">Upewnij się, że wypełniłeś(aś) wszystkie pola!</string>
    <string name="signup_error_title">Bląd!</string>
    <string name="login_error_message">Upewnij się, że wpisałeś nazwę użytkownika oraz hasło!</string>
    <string name="login_error_title">Błąd!</string>
    <string name="login_button_label">Zaloguj</string>
    <string name="sign_up_text">Nie masz jeszcze konta? Zarejestruj się!</string>
    <string name="logout_label">Wyloguj</string>
    <string name="title_activity_sign_up">Rejestracja</string>
    <string name="title_activity_login">Logowanie</string>
    <string name="buttonFindFriends">Szukaj znajomych</string>
    <string name="buttonSearchFriends">Szukaj</string>
    <string name="buttonAddFriend">Dodaj znajomego</string>
    <string name="errorFriendWithEmailNotFound">Nie znaleziono znajomego o podanym adresie email</string>
    <string name="title_activity_find_friends">Szukaj znajomych</string>
    <string name="userAlreadyInvitedYou">" wysłał Ci zaproszenie już wcześniej! ."</string>
    <string name="userAlreadyYourFriend">" jest już twoim znajomym."</string>
    <string name="buttonPendingInvites">Zaproszenia</string>
    <string name="title_activity_pending_invites">Oczekjące zaproszenia</string>
    <string name="buttonMyFriends">Moi znajomi</string>
    <string name="title_activity_my_friends">Lista znajomych</string>
    <string name="addFriendConfirmation">Dodac znajomego?</string>
    <string name="buttonAddFriendPopupConfirm">Tak</string>
    <string name="no">Nie</string>
    <string name="yes">tak</string>
    <string name="friendAddedSuccessfullyToast">" został pomyślnie dodany do znajomych!"</string>
    <string name="friendInvitatioRemoveSuccess">" - zaproszenie usunięte pomyślnie."</string>
    <string name="youEnteredYourEmail">" to przecież twój własny email..."</string>
    <string name="friendInvitationSentSuccessfully">" wysłano zaproszenie"</string>
    <string name="lastNameHint">Nazwisko</string>
    <string name="firstNameHint">Imię</string>
    <string name="buttonEditProfileText">Edytuj profil</string>
    <string name="userAlreadyGotAnInvitation">" został/a zaproszona już wcześniej."</string>
    <string name="addFriendErrorParseJSON">" nie wysłano zaproszenia z powodu błędu serwera :("</string>
    <string name="addFriendAddedSuccessfully">" znajomy dodany!"</string>
    <string name="inviteFriendUnexpectedError">" nie wysłano zaproszenia z powodu nieznanego błedu :("</string>
    <string name="errorRegistrationFailure">"Rejestracja nieudana: "</string>
    <string name="unableToUpdateInstallation">Nie udało się aktywować usługi otrzymywania powiadomień</string>
    <string name="loggingOutInProgress">Wylogowywanie...</string>
    <string name="closingTheApp">Zamykanie aplikacji...</string>
    <string name="statusUpdateInProgress">Uaktualniam status</string>
    <string name="statusUpdateSuccess">Status został pomyślnie uaktualniony</string>
    <string name="editProfileChangePhoto">Wybierz zdjęcie</string>
    <string name="title_activity_edit_profile">Edytuj profil</string>
    <string name="profileImageUpdateSuccessfull">Profil zaktualizowany pomyślnie</string>
    <string name="profileImageUpdatePhotoNotPicked">Nie wybrano zdjęcia</string>
    <string name="errorSomethingWentWrong">Ups! Coś poszło nie tak...</string>
    <string name="acceptSave">Zapisz</string>
    <string name="hintEnterYourFriendsEmail">Wpisz adres email swojego znajomego</string>
    <string name="statusNothingToSay">Nie mam nic do powiedzenia.</string>
    <string name="pendingInvitesNoEntries">Nie masz zaproszeń? Zaproś kogoś sam!</string>
</resources>
